1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* OutFile.m ([OutFile +create:withName:]): Constify withName argument.
	([OutFile -putString:]): Constify argument.  Reformatting throughout.

	* OutFile.h: Constify withName argument to create.
	Constify argument to putString.  Reformatting throughout.

	* MessageProbeWidget.m ([MessageProbeWidget -dynamic]): Remove
	cast to char* for setValue.
	([MessageProbeWidget -idReceive:which]): Likewise.

	* VarProbeWidget.m: Reformatting throughout.

	* simtools.m (initSwarm): Remove TkInterp evals for bitmaps
	hide, super, and special.  Remove Tcl routines send_id, gimmie,
	sitecmd, and do_package.  (These are now in tkobjc's simtools.tcl.)
	Reformatting throughout.
	
Mon Dec  8 22:37:39 1997  glen e. p. ropella  <gepr@swarm.com>

	* simtools: replaced all instances of swarmobject.h with
	objectbase.h and swarmobject/ with objectbase/

1997-12-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VarProbeWidget.h: Constify return of -package. Reformatting
	throughout.

	* VarProbeWidget.m ([VarProbeWidget -createEnd]): Replace calls to
	Tcl with new tkobjc functions setAnchorEast, setWidth,
	disabledState,
	([VarProbeWidget -Spawn]): Use new tkobjc functions ringBell, and
	update.
	([VarProbeWidget -update]): Use new tkobjc functions normalState,
	disabledState, and update.
	([VarProbeWidget -package]): Constify return value.  Use new 
	tkobjc functions ringBell and update.

	([VarProbeWidget -idReceive]): Use new tkobjc function focus.

	* MessageProbeWidget.m ([MessageProbeWidget -createEnd]): Replace
	calls to Tcl with new tkobjc functions disabledState, setWidth,
	and setText, and existing tkobjc function packFillLeft.
	([MessageProbeWidget -dynamic]): Use new tkobjc functions
	ringBell, normalState, and disabledState.
	([MessageProbeWidget -Spawn]): Use new tkobjc function ringBell.
	([MessageProbeWidget -argSpawn:which]): Likewise.
	([MessageProbeWidget -package]): Likewise.