@@ -10,7 +10,7 @@
   FILE *theFile;
 }
 
-+ create: aZone withName: (char *)theName;
++ create: aZone withName: (const char *)theName;
 
 - _setFile_: (FILE *)aFile;
 
