@@ -10,37 +10,35 @@
 
 @implementation InFile
 
-+create: aZone withName: (char *) theName {
-  FILE *aFile ;
-  id anObj ;
++ create: aZone withName: (const char *)theName
+{
+  FILE *aFile;
+  id anObj;
 
-  aFile = fopen(theName,"r") ;
-  if(aFile == NULL){
-    fprintf(stderr,
-      "Unable to open %s as an InFile object!\n",
-       theName) ;
-    return nil ;
-  }
-
-  anObj = [InFile create: aZone] ;
-  [anObj _setFile_: aFile] ;
+  aFile = fopen (theName,"r");
+  if (aFile == NULL)
+    {
+      fprintf (stderr,
+               "Unable to open %s as an InFile object!\n",
+               theName);
+      return nil;
+    }
   
-  return anObj ;
+  anObj = [InFile create: aZone];
+  [anObj _setFile_: aFile];
+  
+  return anObj;
 }
 
--_setFile_: (FILE *) aFile {
-  theFile = aFile ;
-  return self ;
+- _setFile_: (FILE *) aFile
+{
+  theFile = aFile;
+  return self;
 }
 
--(int) getWord: (char *) aWord {
-  int retVal ;
-
-  retVal = fscanf(theFile,"%s",aWord)  ;
-    if(retVal == EOF)
-      return 0 ;
-    else 
-      return 1 ;
+- (int)getWord: (char *)aWord
+{
+  return fscanf (theFile,"%s",aWord) != EOF;
 }
 
 - (int)getLine: (char *)aLine 
@@ -48,6 +46,7 @@
   int c, pos = 0;
   
   while ((c = fgetc (theFile)) != EOF && (c == ' ' || c == '\t'));
+
   while (c != EOF && c != '\n')
     {
       aLine[pos++] = c;
@@ -55,104 +54,74 @@
     }
   aLine[pos] = '\0';
   if (c == EOF)
-    return 0 ;
+    return 0;
   else
     {
       ungetc ('\n', theFile);
-      return 1 ;
+      return 1;
     }
 }
 
--(int) getInt: (int *) anInt {
-  int retVal ;
-
-  retVal = fscanf(theFile,"%d",anInt) ;
-  if(retVal == EOF)
-    return 0 ;
-  else 
-    return 1 ;
+- (int)getInt: (int *) anInt
+{
+  return fscanf (theFile, "%d", anInt) != EOF;
 }
 
--(int) getUnsigned: (unsigned *) anUnsigned {
-  int retVal ;
-
-  retVal = fscanf(theFile,"%u",anUnsigned) ;
-  if(retVal == EOF)
-    return 0 ;
-  else 
-    return 1 ;
+- (int)getUnsigned: (unsigned *)anUnsigned
+{
+  return fscanf (theFile, "%u", anUnsigned) != EOF;
 }
 
--(int) getLong: (long *) aLong {
-  int retVal;
-
-  retVal = fscanf(theFile,"%ld", aLong);
-  if (retVal == EOF)
-    return 0;
-  else
-    return 1;
+- (int)getLong: (long *)aLong
+{
+  return fscanf (theFile, "%ld", aLong) != EOF;
 }
 
--(int) getUnsignedLong: (unsigned long *) anUnsLong {
-  int retVal;
-
-  retVal = fscanf(theFile, "%lu", anUnsLong);
-  if (retVal == EOF)
-    return 0;
-  else
-    return 1;
+- (int)getUnsignedLong: (unsigned long *)anUnsLong
+{
+  return fscanf (theFile, "%lu", anUnsLong) != EOF;
 }
 
--(int) getDouble: (double *) aDouble {
-  int retVal ;
-
-  retVal = fscanf(theFile,"%lg",aDouble) ;
-  if(retVal == EOF)
-    return 0 ;
-  else 
-    return 1 ;
+-(int) getDouble: (double *)aDouble
+{
+  return fscanf (theFile, "%lg", aDouble) != EOF;
 }
 
--(int) getFloat: (float *) aFloat {
-  int retVal ;
-
-  retVal = fscanf(theFile,"%g",aFloat) ;
-  if(retVal == EOF)
-    return 0 ;
-  else 
-    return 1 ;
+- (int)getFloat: (float *)aFloat
+{
+  return fscanf (theFile, "%g", aFloat) != EOF;
 }
 
--(int) getChar: (char *) aChar {
-  (*aChar) = fgetc(theFile) ;
-  if( (*aChar) == EOF)
-    return 0 ;
-  else 
-    return 1 ;
+- (int)getChar: (char *)aChar
+{
+  *aChar = fgetc(theFile);
+  return ((*aChar) != EOF);
 }
 
--(int) unGetChar: (char) aChar {
-  if( (ungetc(aChar,theFile)) == EOF )
-    return 0 ;
-  else 
-    return 1 ;
+- (int)unGetChar: (char)aChar
+{
+  return ungetc (aChar, theFile) != EOF;
 }
 
--(int) skipLine {
-  char aChar ;
+- (int)skipLine
+{
+  char aChar;
+  
+  while (1)
+    {
+      aChar = fgetc(theFile);
 
-  while(1){
-    aChar = fgetc(theFile) ;
-    if(aChar == EOF)
-      return 0 ;
-    if(aChar == '\n')
-      return 1 ;
-  }
+      if(aChar == EOF)
+        return 0;
+      if(aChar == '\n')
+        return 1;
+    }
 }
 
--(void) drop {
-  fclose(theFile) ;
-  [super drop] ;
+- (void)drop
+{
+  fclose (theFile);
+  [super drop];
 }
 
 @end
