@@ -1,5 +1,10 @@
 1997-12-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
+	* InFile.m ([InFile +create:withName:]): Constify withName argument.
+	Reformatting and variable elimination throughout.
+
+	* InFile.h: Constify withName argument to create.
+
 	* OutFile.m ([OutFile +create:withName:]): Constify withName argument.
 	([OutFile -putString:]): Constify argument.  Reformatting throughout.
 
